clion flatpak idea.properties location

--- a/.config/JetBrains/CLion2024.1/idea.properties
+++ b/.config/JetBrains/CLion2024.1/idea.properties
@@ -1,3 +1,6 @@
+# flatpak /var/lib/flatpak/app/com.jetbrains.CLion/current/active/files/bin
+ide.browser.jcef.sandbox.enable=false
+
 # custom CLion properties (expand/override 'bin/idea.properties')
 
 idea.config.path=/mnt/HDExtra/JetBrains/clion/config
