more clion configs

--- a/.config/JetBrains/CLion2024.1/idea.properties
+++ b/.config/JetBrains/CLion2024.1/idea.properties
@@ -8,3 +8,8 @@ idea.system.path=/mnt/HDExtra/JetBrains/clion/system
 idea.log.path=/mnt/HDExtra/JetBrains/clion/log
 idea.plugins.path=/mnt/HDExtra/JetBrains/clion/plugins
 
+cidr.inspection.dfa.timeout.in.sec=60
+
+# Menu > Help > Find Action > Registry...
+clion.clangd.max.memory=10000
+
