added more Jetbrains idea properties

--- a/.config/JetBrains/CLion2024.1/idea.properties
+++ b/.config/JetBrains/CLion2024.1/idea.properties
@@ -1,3 +1,5 @@
+# Select Help | Edit Custom Properties from the main menu
+
 # flatpak /var/lib/flatpak/app/com.jetbrains.CLion/current/active/files/bin
 ide.browser.jcef.sandbox.enable=false
 
@@ -8,8 +10,13 @@ idea.system.path=/mnt/HDExtra/JetBrains/clion/system
 idea.log.path=/mnt/HDExtra/JetBrains/clion/log
 idea.plugins.path=/mnt/HDExtra/JetBrains/clion/plugins
 
-cidr.inspection.dfa.timeout.in.sec=60
+#default idea.max.intellisense.filesize=2500 kilobytes
+idea.max.intellisense.filesize=3500
 
 # Menu > Help > Find Action > Registry...
+#default clion.clangd.max.memory=8000
 clion.clangd.max.memory=10000
-
+#default cidr.inspection.dfa.timeout.in.sec=5
+cidr.inspection.dfa.timeout.in.sec=600
+#default cidr.max.intellisense.file.length=500000 characters
+cidr.max.intellisense.file.length=10000000
