--- a/.gitconfig
+++ b/.gitconfig
@@ -11,5 +11,46 @@
 	editor = nano
 [alias]
 	c1 = clone --depth 1
+	lol = log --oneline
+	graph = log --oneline --graph --decorate
+	diffw = diff --word-diff
+	actions = reflog --date=iso
 [color]
 	ui = auto
+[core]
+	excludesfile = ~/.gitignore
+[http]
+	cookiefile = ~/.gitcookies
+[grep]
+	lineNumber = true
+	patternType = perl
+[diff]
+	tool = meld
+	guitool = meld
+[difftool]
+	prompt = false
+# [difftool "meld"]
+# 	path = \"C:/Program Files (x86)/Meld/Meld.exe\"
+[merge]
+	conflictstyle = diff3
+	tool = meld
+[mergetool]
+	prompt = false
+[mergetool.meld]
+	cmd = meld --auto-merge $LOCAL $BASE $REMOTE --output=$MERGED --diff $BASE $LOCAL --diff $BASE $REMOTE
+# [mergetool "meld"]
+# 	path = \"C:/Program Files (x86)/Meld/Meld.exe\"
+# 	cmd = \"C:\\Program Files (x86)\\Meld\\Meld.exe\" --auto-merge \"$LOCAL\" \"$BASE\" \"$REMOTE\" --output \"$MERGED\"
+[rerere]
+	enabled = true
+
+# reflog - history of checkouts/commits, actions in repo
+# git reflog --date=iso
+# git reflog --date=iso --pretty
+
+# recover un-commited changes, as long as they have been staged and before git garbage collect them
+# git recover 
+
+# find user that changed specific lines, more -C increases history depth
+# git blame -C README.md
+# git blame -C -C -C README.md
