--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,9 @@
 	defaultBranch = master
 [gui]
 	editor = nano
+# [gui]
+# 	editor = code
+# 	historybrowser = git-cola dag
 [alias]
 	c1 = clone --depth 1 --recursive --shallow-submodules
 	lol = log --oneline
@@ -43,6 +46,15 @@
 # 	cmd = \"C:\\Program Files (x86)\\Meld\\Meld.exe\" --auto-merge \"$LOCAL\" \"$BASE\" \"$REMOTE\" --output \"$MERGED\"
 [rerere]
 	enabled = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[cola]
+	blameviewer = git gui blame
+	theme = flat-dark-red
+	icontheme = dark
 
 # reflog - history of checkouts/commits, actions in repo
 # git reflog --date=iso
